# LobbyMap-Infra

./: .gitignore  README.md  config.yaml  docker-compose.yml
data/documents/: data_map.json  prompt_map.json
data/weaviate_data/: classifications.db  schema.db
data/weaviate_data/alpha_v0/nuw07Z8PCQVu/: indexcount  proplengths
data/weaviate_data/alpha_v0/nuw07Z8PCQVu/lsm/objects/: segment-1737370323770081593.bloom  segment-1737370323770081593.cna  segment-1737370323770081593.secondary.0.bloom  segment-1737370323770081593.secondary.1.bloom  segment-1737371459781952425.bloom  segment-1737371459781952425.db  segment-1737371459781952425.secondary.0.bloom  segment-1737371459781952425.secondary.1.bloom  segment-1737371860227190888.bloom  segment-1737371860227190888.db  segment-1737371860227190888.secondary.0.bloom  segment-1737371860227190888.secondary.1.bloom  segment-1737373614203444672.bloom  segment-1737373614203444672.db  segment-1737373614203444672.secondary.0.bloom  segment-1737373614203444672.secondary.1.bloom  segment-1737388787126690001.bloom  segment-1737388787126690001.cna  segment-1737388787126690001.db  segment-1737388787126690001.secondary.0.bloom
data/weaviate_data/alpha_v0/nuw07Z8PCQVu/vectors_content_vector.hnsw.commitlog.d/: 1737229530
data/weaviate_data/alpha_v0/sqXuZLCI9Cwx/: indexcount  proplengths
data/weaviate_data/alpha_v0/sqXuZLCI9Cwx/vectors_content_vector.hnsw.commitlog.d/: 1741084780
data/weaviate_data/raft/: raft.db
data/weaviate_data/v3_docling_semantic_nomic/UCRBJ9ZfyIL8/: indexcount  proplengths
data/weaviate_data/v3_docling_semantic_nomic/UCRBJ9ZfyIL8/vectors_content_vector.hnsw.commitlog.d/: 1751713694
docling-parser/: Dockerfile  pyproject.toml  requirements.txt
docling-parser/docling_parser/api/: server.py
docling-parser/docling_parser/parser/: __init__.py  chunker.py  docling_parse.py  pipeline.py  schemas.py
feedback-tool/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
feedback-tool/feedback-tool/api/: schema.py  server.py
frontend/: Dockerfile  README.md  pyproject.toml  requirements.txt
frontend/frontend/: ui.py  utils.py
frontend/frontend/.streamlit/: config.toml
lobby-map-fbtool/: .dockerignore  Dockerfile  requirements.txt
lobby-map-fbtool/lobby-map-fbtool/api/: schema.py  server.py
nginx/: .htpasswd  nginx.conf
nginx/conf.d/: lobbymap.conf
ollama/: Dockerfile  pull-models.sh
pdf_manager/: Dockerfile
rag/: Dockerfile  pyproject.toml  requirements.txt
rag/rag/backend/: server.py  utils.py
rag/rag/backend/templates/: __init__.py  stance_prompt.jinja  stance_schema.json
rag/rag/lobbymap_search/etl/: __init__.py  chunker.py  parser.py  pipeline.py  schemas.py
rag/rag/lobbymap_search/etl/parsers/: docling_parse.py  pymupdf_parse.py
(+339 files in other folders)
