[project]
name = "rag"
version = "0.1.0"
description = ""
authors = [
    {name = "Imene KOLLI",email = "53266529+imene-swaan@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pyyaml (>=6.0.2,<7.0.0)",
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "docling (>=2.15.1)",
    "gunicorn (>=23.0.0,<24.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
