[project]
name = "docling-parser"
version = "0.1.0"
description = ""
authors = [
    {name = "Imene Kolli",email = "imene.kolli@df.uzh.ch"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pyyaml (>=6.0.2,<7.0.0)",
    "fastapi (>=0.115.14,<0.116.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "docling (>=2.40.0,<3.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "chonkie (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
